// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`creates JSON reporter 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"logux-server\\",\\"msg\\":\\"Action with unknown type\\"}
"
`;

exports[`creates human reporter 1`] = `
" WARN   Action with unknown type at 1970-01-01 00:00:00

"
`;

exports[`reports EACCES error 1`] = `
"{\\"level\\":60,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"err\\":{},\\"note\\":\\"Non-privileged users can't start a listening socket on ports below 1024. Try to change user or take another port.\\\\n\\\\n$ su - \`<username>\`\\\\n$ npm start -p 80\\",\\"msg\\":\\"You are not allowed to run server on port \`80\`\\"}
"
`;

exports[`reports EACCES error 2`] = `
"[41m[37m FATAL [39m[49m [1m[31mYou are not allowed to run server on port [33m80[31m[39m[22m [2mat 1970-01-01 00:00:00[22m
        [90mNon-privileged users can't start a listening socket on ports below 1024.[39m
        [90mTry to change user or take another port.[39m
        [90m[39m
        [90m$ su - [1m<username>[22m[39m
        [90m$ npm start -p 80[39m

"
`;

exports[`reports EADDRINUSE error 1`] = `
"{\\"level\\":60,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"err\\":{},\\"note\\":\\"Another Logux server or other app already running on this port. Probably you haven’t stopped server from other project or previous version of this server was not killed.\\\\n\\\\n$ su - root\\\\n# netstat -nlp | grep 31337\\\\nProto   Local Address   State    PID/Program name\\\\ntcp     0.0.0.0:31337    LISTEN   \`777\`/node\\\\n# sudo kill -9 \`777\`\\",\\"msg\\":\\"Port \`31337\` already in use\\"}
"
`;

exports[`reports EADDRINUSE error 2`] = `
"[41m[37m FATAL [39m[49m [1m[31mPort [33m31337[31m already in use[39m[22m [2mat 1970-01-01 00:00:00[22m
        [90mAnother Logux server or other app already running on this port.[39m
        [90mProbably you haven’t stopped server from other project or previous[39m
        [90mversion of this server was not killed.[39m
        [90m[39m
        [90m$ su - root[39m
        [90m# netstat -nlp | grep 31337[39m
        [90mProto   Local Address   State    PID/Program name[39m
        [90mtcp     0.0.0.0:31337    LISTEN   [1m777[22m/node[39m
        [90m# sudo kill -9 [1m777[22m[39m

"
`;

exports[`reports LOGUX_NO_CONTROL_SECRET error 1`] = `
"{\\"level\\":60,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"err\\":{\\"type\\":\\"Object\\",\\"message\\":\\"\`backend\` requires also \`controlSecret\` option\\",\\"stack\\":\\"\\"},\\"note\\":\\"Call \`npx nanoid\` and set result as \`controlSecret\` or \`LOGUX_CONTROL_SECRET\` environment variable\\",\\"msg\\":\\"\`backend\` requires also \`controlSecret\` option\\"}
"
`;

exports[`reports LOGUX_NO_CONTROL_SECRET error 2`] = `
"[41m[37m FATAL [39m[49m [1m[31m[33mbackend[31m requires also [33mcontrolSecret[31m option[39m[22m [2mat 1970-01-01 00:00:00[22m
        [90mCall [1mnpx nanoid[22m and set result as [1mcontrolSecret[22m or[39m
        [90m[1mLOGUX_CONTROL_SECRET[22m environment variable[39m

"
`;

exports[`reports Logux error 1`] = `
"{\\"level\\":60,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"note\\":\\"Maybe there is a mistake in option name or this version of Logux Server doesn’t support this option\\",\\"msg\\":\\"Unknown option \`suprotocol\` in server constructor\\"}
"
`;

exports[`reports Logux error 2`] = `
"[41m[37m FATAL [39m[49m [1m[31mUnknown option [33msuprotocol[31m in server constructor[39m[22m [2mat 1970-01-01 00:00:00[22m
        [90mMaybe there is a mistake in option name or this version of Logux Server[39m
        [90mdoesn’t support this option[39m

"
`;

exports[`reports actions with metadata containing 'clients' array 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"action\\":{\\"type\\":\\"ADD_USER\\",\\"id\\":100,\\"name\\":\\"John\\"},\\"meta\\":{\\"clients\\":[\\"1:-lCr7e9s\\",\\"2:wv0r_O5C\\"],\\"id\\":\\"1487805099387 100:uImkcF4z 0\\",\\"time\\":1487805099387,\\"reasons\\":[],\\"server\\":\\"server:H1f8LAyzl\\",\\"subprotocol\\":\\"1.0.0\\"},\\"msg\\":\\"Action was added\\"}
"
`;

exports[`reports actions with metadata containing 'clients' array 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mAction was added[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action: 
          type: \\"[1mADD_USER[22m\\"
          id:   [1m100[22m
          name: \\"[1mJohn[22m\\"
        Meta:   
          clients:     [\\"[1m1[22m:[33m-lC[39m[35mr7e[39m[31m9s[39m\\",\\"[1m2[22m:[33mwv0[39m[31mr_O[39m[34m5C[39m\\"]
          id:          [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m
          time:        [1m1487805099387[22m
          reasons:     []
          server:      [1mserver[22m:[34mH1f[39m[35m8LA[39m[36myzl[39m
          subprotocol: \\"[1m1.0.0[22m\\"

"
`;

exports[`reports actions with metadata containing 'excludeClients' array 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"action\\":{\\"type\\":\\"ADD_USER\\",\\"id\\":100,\\"name\\":\\"John\\"},\\"meta\\":{\\"excludeClients\\":[\\"1:-lCr7e9s\\",\\"2:wv0r_O5C\\"],\\"id\\":\\"1487805099387 100:uImkcF4z 0\\",\\"time\\":1487805099387,\\"reasons\\":[],\\"server\\":\\"server:H1f8LAyzl\\",\\"subprotocol\\":\\"1.0.0\\"},\\"msg\\":\\"Action was added\\"}
"
`;

exports[`reports actions with metadata containing 'excludeClients' array 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mAction was added[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action: 
          type: \\"[1mADD_USER[22m\\"
          id:   [1m100[22m
          name: \\"[1mJohn[22m\\"
        Meta:   
          excludeClients: [\\"[1m1[22m:[33m-lC[39m[35mr7e[39m[31m9s[39m\\",\\"[1m2[22m:[33mwv0[39m[31mr_O[39m[34m5C[39m\\"]
          id:             [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m
          time:           [1m1487805099387[22m
          reasons:        []
          server:         [1mserver[22m:[34mH1f[39m[35m8LA[39m[36myzl[39m
          subprotocol:    \\"[1m1.0.0[22m\\"

"
`;

exports[`reports add 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"action\\":{\\"type\\":\\"CHANGE_USER\\",\\"id\\":100,\\"data\\":{\\"name\\":\\"John\\",\\"role\\":null,\\"array\\":[1,[2],{\\"a\\":\\"1\\",\\"b\\":{\\"c\\":2},\\"d\\":[],\\"e\\":null},null]}},\\"meta\\":{\\"id\\":\\"1487805099387 100:uImkcF4z 0\\",\\"time\\":1487805099387,\\"reasons\\":[\\"lastValue\\",\\"debug\\"],\\"server\\":\\"server:H1f8LAyzl\\",\\"subprotocol\\":\\"1.0.0\\"},\\"msg\\":\\"Action was added\\"}
"
`;

exports[`reports add 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mAction was added[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action: 
          type: \\"[1mCHANGE_USER[22m\\"
          id:   [1m100[22m
          data: 
            name:  \\"[1mJohn[22m\\"
            role:  [1mnull[22m
            array: [[1m1[22m, [[1m2[22m], { a: \\"[1m1[22m\\", b: { c: [1m2[22m }, d: [], e: [1mnull[22m }, [1mnull[22m]
        Meta:   
          id:          [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m
          time:        [1m1487805099387[22m
          reasons:     [\\"[1mlastValue[22m\\", \\"[1mdebug[22m\\"]
          server:      [1mserver[22m:[34mH1f[39m[35m8LA[39m[36myzl[39m
          subprotocol: \\"[1m1.0.0[22m\\"

"
`;

exports[`reports add and clean 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"action\\":{\\"type\\":\\"CHANGE_USER\\",\\"id\\":100,\\"data\\":{\\"name\\":\\"John\\",\\"role\\":null,\\"array\\":[1,[2],{\\"a\\":\\"1\\",\\"b\\":{\\"c\\":2},\\"d\\":[],\\"e\\":null},null]}},\\"meta\\":{\\"id\\":\\"1487805099387 100:uImkcF4z 0\\",\\"time\\":1487805099387,\\"reasons\\":[\\"lastValue\\",\\"debug\\"],\\"server\\":\\"server:H1f8LAyzl\\",\\"subprotocol\\":\\"1.0.0\\"},\\"msg\\":\\"Action was added and cleaned\\"}
"
`;

exports[`reports add and clean 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mAction was added and cleaned[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action: 
          type: \\"[1mCHANGE_USER[22m\\"
          id:   [1m100[22m
          data: 
            name:  \\"[1mJohn[22m\\"
            role:  [1mnull[22m
            array: [[1m1[22m, [[1m2[22m], { a: \\"[1m1[22m\\", b: { c: [1m2[22m }, d: [], e: [1mnull[22m }, [1mnull[22m]
        Meta:   
          id:          [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m
          time:        [1m1487805099387[22m
          reasons:     [\\"[1mlastValue[22m\\", \\"[1mdebug[22m\\"]
          server:      [1mserver[22m:[34mH1f[39m[35m8LA[39m[36myzl[39m
          subprotocol: \\"[1m1.0.0[22m\\"

"
`;

exports[`reports authenticated 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"connectionId\\":\\"670\\",\\"subprotocol\\":\\"1.0.0\\",\\"nodeId\\":\\"admin:100:uImkcF4z\\",\\"msg\\":\\"User was authenticated\\"}
"
`;

exports[`reports authenticated 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mUser was authenticated[39m[22m [2mat 1970-01-01 00:00:00[22m
        Connection ID: [1m670[22m
        Subprotocol:   [1m1.0.0[22m
        Node ID:       [1madmin[22m:[31m100[39m

"
`;

exports[`reports authenticated without user ID 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"connectionId\\":\\"670\\",\\"subprotocol\\":\\"1.0.0\\",\\"nodeId\\":\\"uImkcF4z\\",\\"msg\\":\\"User was authenticated\\"}
"
`;

exports[`reports authenticated without user ID 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mUser was authenticated[39m[22m [2mat 1970-01-01 00:00:00[22m
        Connection ID: [1m670[22m
        Subprotocol:   [1m1.0.0[22m
        Node ID:       uImkcF4z

"
`;

exports[`reports clean 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"actionId\\":\\"1487805099387 100:uImkcF4z 0\\",\\"msg\\":\\"Action was cleaned\\"}
"
`;

exports[`reports clean 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mAction was cleaned[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action ID: [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m

"
`;

exports[`reports connect 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"connectionId\\":\\"670\\",\\"ipAddress\\":\\"10.110.6.56\\",\\"msg\\":\\"Client was connected\\"}
"
`;

exports[`reports connect 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mClient was connected[39m[22m [2mat 1970-01-01 00:00:00[22m
        Connection ID: [1m670[22m
        IP address:    [1m10.110.6.56[22m

"
`;

exports[`reports denied 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"actionId\\":\\"1487805099387 100:uImkcF4z 0\\",\\"msg\\":\\"Action was denied\\"}
"
`;

exports[`reports denied 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mAction was denied[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action ID: [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m

"
`;

exports[`reports destroy 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"msg\\":\\"Shutting down Logux server\\"}
"
`;

exports[`reports destroy 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mShutting down Logux server[39m[22m [2mat 1970-01-01 00:00:00[22m

"
`;

exports[`reports disconnect 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"nodeId\\":\\"100:uImkcF4z\\",\\"msg\\":\\"Client was disconnected\\"}
"
`;

exports[`reports disconnect 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mClient was disconnected[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID: [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m

"
`;

exports[`reports disconnect from unauthenticated user 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"connectionId\\":\\"670\\",\\"msg\\":\\"Client was disconnected\\"}
"
`;

exports[`reports disconnect from unauthenticated user 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mClient was disconnected[39m[22m [2mat 1970-01-01 00:00:00[22m
        Connection ID: [1m670[22m

"
`;

exports[`reports error 1`] = `
"{\\"level\\":60,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"err\\":{\\"type\\":\\"Object\\",\\"message\\":\\"Some mistake\\",\\"stack\\":\\"Error: Some mistake\\\\n    at Object.<anonymous> (/dev/app/index.js:28:13)\\\\n    at Module._compile (module.js:573:32)\\\\n    at at runTest (/dev/app/node_modules/jest/index.js:50:10)\\\\n    at process._tickCallback (internal/process/next_tick.js:103:7)\\",\\"name\\":\\"Error\\"},\\"msg\\":\\"Some mistake\\"}
"
`;

exports[`reports error 2`] = `
"[41m[37m FATAL [39m[49m [1m[31mSome mistake[39m[22m [2mat 1970-01-01 00:00:00[22m
[31m        at Object.<anonymous> (./index.js:28:13)[39m
[90m        at Module._compile (module.js:573:32)[39m
[90m        at at runTest (./node_modules/jest/index.js:50:10)[39m
[90m        at process._tickCallback (internal/process/next_tick.js:103:7)[39m

"
`;

exports[`reports error from action 1`] = `
"{\\"level\\":50,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"err\\":{\\"type\\":\\"Object\\",\\"message\\":\\"Some mistake\\",\\"stack\\":\\"Error: Some mistake\\\\n    at Object.<anonymous> (/dev/app/index.js:28:13)\\\\n    at Module._compile (module.js:573:32)\\\\n    at at runTest (/dev/app/node_modules/jest/index.js:50:10)\\\\n    at process._tickCallback (internal/process/next_tick.js:103:7)\\",\\"name\\":\\"Error\\"},\\"actionId\\":\\"1487805099387 100:uImkcF4z 0\\",\\"msg\\":\\"Some mistake\\"}
"
`;

exports[`reports error from action 2`] = `
"[41m[37m ERROR [39m[49m [1m[31mSome mistake[39m[22m [2mat 1970-01-01 00:00:00[22m
[31m        at Object.<anonymous> (./index.js:28:13)[39m
[90m        at Module._compile (module.js:573:32)[39m
[90m        at at runTest (./node_modules/jest/index.js:50:10)[39m
[90m        at process._tickCallback (internal/process/next_tick.js:103:7)[39m
        Action ID: [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m

"
`;

exports[`reports error from client 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"connectionId\\":\\"670\\",\\"msg\\":\\"Client error: A timeout was reached (5000 ms)\\"}
"
`;

exports[`reports error from client 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mClient error: A timeout was reached (5000 ms)[39m[22m [2mat 1970-01-01 00:00:00[22m
        Connection ID: [1m670[22m

"
`;

exports[`reports error from node 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"nodeId\\":\\"100:uImkcF4z\\",\\"msg\\":\\"Sync error: A timeout was reached (5000 ms)\\"}
"
`;

exports[`reports error from node 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mSync error: A timeout was reached (5000 ms)[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID: [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m

"
`;

exports[`reports error with token 1`] = `
"{\\"level\\":50,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"err\\":{\\"type\\":\\"Object\\",\\"message\\":\\"{\\\\\\"Authorization\\\\\\":\\\\\\"[SECRET]\\\\\\"}\\",\\"stack\\":\\"Error: {\\\\\\"Authorization\\\\\\":\\\\\\"[SECRET]\\\\\\"}\\\\n    at Object.<anonymous> (/dev/app/index.js:28:13)\\\\n    at Module._compile (module.js:573:32)\\\\n    at at runTest (/dev/app/node_modules/jest/index.js:50:10)\\\\n    at process._tickCallback (internal/process/next_tick.js:103:7)\\",\\"name\\":\\"Error\\"},\\"actionId\\":\\"1487805099387 100:uImkcF4z 0\\",\\"msg\\":\\"{\\\\\\"Authorization\\\\\\":\\\\\\"[SECRET]\\\\\\"}\\"}
"
`;

exports[`reports error with token 2`] = `
"[41m[37m ERROR [39m[49m [1m[31m{\\"Authorization\\":\\"[SECRET]\\"}[39m[22m [2mat 1970-01-01 00:00:00[22m
[31m        at Object.<anonymous> (./index.js:28:13)[39m
[90m        at Module._compile (module.js:573:32)[39m
[90m        at at runTest (./node_modules/jest/index.js:50:10)[39m
[90m        at process._tickCallback (internal/process/next_tick.js:103:7)[39m
        Action ID: [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m

"
`;

exports[`reports listen 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"loguxServer\\":\\"0.0.0\\",\\"environment\\":\\"development\\",\\"nodeId\\":\\"server:FnXaqDxY\\",\\"subprotocol\\":\\"0.0.0\\",\\"supports\\":\\"0.x\\",\\"note\\":[\\"Server was started in non-secure development mode\\",\\"Press Ctrl-C to shutdown server\\"],\\"listen\\":\\"ws://127.0.0.1:31337/\\",\\"healthCheck\\":\\"http://127.0.0.1:31337/health\\",\\"controlListen\\":\\"http://127.0.0.1:31337/\\",\\"controlMask\\":\\"127.0.0.0/255\\",\\"backendSend\\":\\"http://127.0.0.1:3000/logux\\",\\"msg\\":\\"Logux server is listening\\"}
"
`;

exports[`reports listen 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mLogux server is listening[39m[22m [2mat 1970-01-01 00:00:00[22m
        PID:            [1m21384[22m
        Logux server:   [1m0.0.0[22m
        Environment:    [1mdevelopment[22m
        Node ID:        [1mserver[22m:[31mFnX[39m[35maqD[39m[34mxY[39m
        Subprotocol:    [1m0.0.0[22m
        Supports:       [1m0.x[22m
        Health check:   [1mhttp://127.0.0.1:31337/health[22m
        Control listen: [1mhttp://127.0.0.1:31337/[22m
        Control mask:   [1m127.0.0.0/255[22m
        Backend send:   [1mhttp://127.0.0.1:3000/logux[22m
        Listen:         [1mws://127.0.0.1:31337/[22m
        [90mServer was started in non-secure development mode[39m
        [90mPress Ctrl-C to shutdown server[39m

"
`;

exports[`reports listen for custom domain 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"loguxServer\\":\\"0.0.0\\",\\"environment\\":\\"development\\",\\"nodeId\\":\\"server:FnXaqDxY\\",\\"subprotocol\\":\\"0.0.0\\",\\"supports\\":\\"0.x\\",\\"note\\":[\\"Server was started in non-secure development mode\\",\\"Press Ctrl-C to shutdown server\\"],\\"server\\":true,\\"prometheus\\":\\"http://127.0.0.1:31338/prometheus\\",\\"msg\\":\\"Logux server is listening\\"}
"
`;

exports[`reports listen for custom domain 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mLogux server is listening[39m[22m [2mat 1970-01-01 00:00:00[22m
        PID:          [1m21384[22m
        Logux server: [1m0.0.0[22m
        Environment:  [1mdevelopment[22m
        Node ID:      [1mserver[22m:[31mFnX[39m[35maqD[39m[34mxY[39m
        Subprotocol:  [1m0.0.0[22m
        Supports:     [1m0.x[22m
        Prometheus:   [1mhttp://127.0.0.1:31338/prometheus[22m
        Listen:       [1mCustom HTTP server[22m
        [90mServer was started in non-secure development mode[39m
        [90mPress Ctrl-C to shutdown server[39m

"
`;

exports[`reports listen for production 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"loguxServer\\":\\"0.0.0\\",\\"environment\\":\\"production\\",\\"nodeId\\":\\"server:FnXaqDxY\\",\\"subprotocol\\":\\"0.0.0\\",\\"supports\\":\\"0.x\\",\\"listen\\":\\"wss://127.0.0.1:31337/\\",\\"healthCheck\\":\\"https://127.0.0.1:31337/health\\",\\"controlListen\\":\\"http://127.0.0.1:31337/\\",\\"redis\\":\\"//localhost\\",\\"msg\\":\\"Logux server is listening\\"}
"
`;

exports[`reports listen for production 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mLogux server is listening[39m[22m [2mat 1970-01-01 00:00:00[22m
        PID:            [1m21384[22m
        Logux server:   [1m0.0.0[22m
        Environment:    [1mproduction[22m
        Node ID:        [1mserver[22m:[31mFnX[39m[35maqD[39m[34mxY[39m
        Subprotocol:    [1m0.0.0[22m
        Supports:       [1m0.x[22m
        Health check:   [1mhttps://127.0.0.1:31337/health[22m
        Control listen: [1mhttp://127.0.0.1:31337/[22m
        Redis:          [1m//localhost[22m
        Listen:         [1mwss://127.0.0.1:31337/[22m

"
`;

exports[`reports subscribed 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"channel\\":\\"user/100\\",\\"actionId\\":\\"1487805099387 100:uImkcF4z 0\\",\\"msg\\":\\"Client was subscribed\\"}
"
`;

exports[`reports subscribed 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mClient was subscribed[39m[22m [2mat 1970-01-01 00:00:00[22m
        Channel:   [1muser/100[22m
        Action ID: [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m

"
`;

exports[`reports sync error 1`] = `
"{\\"level\\":50,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"err\\":{\\"type\\":\\"Object\\",\\"message\\":\\"Logux received unknown-message error (Unknown message \`bad\` type)\\",\\"stack\\":\\"\\",\\"name\\":\\"LoguxError\\"},\\"connectionId\\":\\"670\\",\\"msg\\":\\"Logux received unknown-message error (Unknown message \`bad\` type)\\"}
"
`;

exports[`reports sync error 2`] = `
"[41m[37m ERROR [39m[49m [1m[31mLogux received unknown-message error (Unknown message [33mbad[31m type)[39m[22m [2mat 1970-01-01 00:00:00[22m
        Connection ID: [1m670[22m

"
`;

exports[`reports unauthenticated 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"connectionId\\":\\"670\\",\\"subprotocol\\":\\"1.0.0\\",\\"nodeId\\":\\"100:uImkcF4z\\",\\"msg\\":\\"Bad authentication\\"}
"
`;

exports[`reports unauthenticated 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mBad authentication[39m[22m [2mat 1970-01-01 00:00:00[22m
        Connection ID: [1m670[22m
        Subprotocol:   [1m1.0.0[22m
        Node ID:       [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m

"
`;

exports[`reports unknownType 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"type\\":\\"CHANGE_SER\\",\\"actionId\\":\\"1487805099387 100:vAApgNT9 0\\",\\"msg\\":\\"Action with unknown type\\"}
"
`;

exports[`reports unknownType 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mAction with unknown type[39m[22m [2mat 1970-01-01 00:00:00[22m
        Type:      [1mCHANGE_SER[22m
        Action ID: [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[34mvAA[39m[32mpgN[39m[31mT9[39m [1m0[22m

"
`;

exports[`reports unknownType from server 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"type\\":\\"CHANGE_SER\\",\\"actionId\\":\\"1650269021700 server:FnXaqDxY 0\\",\\"msg\\":\\"Action with unknown type\\"}
"
`;

exports[`reports unknownType from server 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mAction with unknown type[39m[22m [2mat 1970-01-01 00:00:00[22m
        Type:      [1mCHANGE_SER[22m
        Action ID: [1m[34m1650[39m[35m2690[39m[31m2170[39m[31m0[39m[22m [1mserver[22m:[31mFnX[39m[35maqD[39m[34mxY[39m [1m0[22m

"
`;

exports[`reports unsubscribed 1`] = `
"{\\"level\\":30,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"channel\\":\\"user/100\\",\\"actionId\\":\\"1650271940900 100:uImkcF4z 0\\",\\"msg\\":\\"Client was unsubscribed\\"}
"
`;

exports[`reports unsubscribed 2`] = `
"[42m[30m INFO [39m[49m  [1m[32mClient was unsubscribed[39m[22m [2mat 1970-01-01 00:00:00[22m
        Channel:   [1muser/100[22m
        Action ID: [1m[36m1650[39m[34m2719[39m[35m4090[39m[35m0[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m

"
`;

exports[`reports useless actions 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"action\\":{\\"type\\":\\"ADD_USER\\",\\"id\\":100,\\"name\\":\\"John\\"},\\"meta\\":{\\"id\\":\\"1487805099387 100:uImkcF4z 0\\",\\"time\\":1487805099387,\\"reasons\\":[],\\"server\\":\\"server:H1f8LAyzl\\",\\"subprotocol\\":\\"1.0.0\\"},\\"msg\\":\\"Useless action\\"}
"
`;

exports[`reports useless actions 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mUseless action[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action: 
          type: \\"[1mADD_USER[22m\\"
          id:   [1m100[22m
          name: \\"[1mJohn[22m\\"
        Meta:   
          id:          [1m[32m1487[39m[35m8050[39m[33m9938[39m[33m7[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m
          time:        [1m1487805099387[22m
          reasons:     []
          server:      [1mserver[22m:[34mH1f[39m[35m8LA[39m[36myzl[39m
          subprotocol: \\"[1m1.0.0[22m\\"

"
`;

exports[`reports wrongChannel 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"actionId\\":\\"1650269045800 100:IsvVzqWx 0\\",\\"channel\\":\\"ser/100\\",\\"msg\\":\\"Wrong channel name\\"}
"
`;

exports[`reports wrongChannel 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mWrong channel name[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action ID: [1m[32m1650[39m[34m2690[39m[33m4580[39m[33m0[39m[22m [1m100[22m:[31mIsv[39m[33mVzq[39m[34mWx[39m [1m0[22m
        Channel:   [1mser/100[22m

"
`;

exports[`reports wrongChannel without name 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"actionId\\":\\"1650269056600 100:uImkcF4z 0\\",\\"msg\\":\\"Wrong channel name\\"}
"
`;

exports[`reports wrongChannel without name 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mWrong channel name[39m[22m [2mat 1970-01-01 00:00:00[22m
        Action ID: [1m[36m1650[39m[31m2690[39m[34m5660[39m[34m0[39m[22m [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m [1m0[22m

"
`;

exports[`reports wrongControlIp 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"ipAddress\\":\\"6.0.0.1\\",\\"mask\\":\\"127.0.0.1/8\\",\\"msg\\":\\"IP address of control request do not pass the mask\\"}
"
`;

exports[`reports wrongControlIp 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mIP address of control request do not pass the mask[39m[22m [2mat 1970-01-01 00:00:00[22m
        IP address: [1m6.0.0.1[22m
        Mask:       [1m127.0.0.1/8[22m

"
`;

exports[`reports wrongControlSecret 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"ipAddress\\":\\"6.0.0.1\\",\\"wrongSecret\\":\\"ArgDCPc1IxfU97V1ukeN6\\",\\"msg\\":\\"Wrong secret in control request\\"}
"
`;

exports[`reports wrongControlSecret 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mWrong secret in control request[39m[22m [2mat 1970-01-01 00:00:00[22m
        IP address:   [1m6.0.0.1[22m
        Wrong secret: [1mArgDCPc1IxfU97V1ukeN6[22m

"
`;

exports[`reports zombie 1`] = `
"{\\"level\\":40,\\"time\\":\\"1970-01-01T00:00:00.000Z\\",\\"pid\\":21384,\\"hostname\\":\\"localhost\\",\\"name\\":\\"test\\",\\"nodeId\\":\\"100:uImkcF4z\\",\\"msg\\":\\"Zombie client was disconnected\\"}
"
`;

exports[`reports zombie 2`] = `
"[43m[30m WARN [39m[49m  [1m[33mZombie client was disconnected[39m[22m [2mat 1970-01-01 00:00:00[22m
        Node ID: [1m100[22m:[32muIm[39m[36mkcF[39m[33m4z[39m

"
`;
